--- a/client/react-css/inputField.scss
+++ b/client/react-css/inputField.scss
@@ -1,7 +1,7 @@
 @import 'styleGlobals';
 
 input {
-  padding: 5px 0;
+  padding: 5px;
   font-family: $application-font-family;
   border: 1px solid $input-border-color;
   border-radius: 0;
